added font awesome icons, and finished header and bottom navbar

--- a/src/_custom_variables.scss
+++ b/src/_custom_variables.scss
@@ -13,3 +13,11 @@ $dark:          $custom-dark-gray;
 
 $font-family-sans-serif: $custom-body-font;
 $headings-font-family:   $custom-title-font;
+
+h1{
+    font-size: 3rem;
+}
+
+@import "node_modules/bootstrap/scss/bootstrap";
+
+
