--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,6 +4,9 @@
 @import "../components/_palette.scss";
 @import "node_modules/bootstrap/scss/bootstrap";
 
-p {
-    font-size: 1rem;
+.content {
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
