finished routing and landing page

--- a/src/components/bottom_nav.scss
+++ b/src/components/bottom_nav.scss
@@ -15,6 +15,10 @@
     font-size: 2rem;
     text-align: center;
     width: 100%;
+
+    a{
+        color: white;
+    }
     .menu {
         position: absolute;
         margin: auto;
