--- a/src/_custom_variables.scss
+++ b/src/_custom_variables.scss
@@ -1,6 +1,6 @@
 @import "node_modules/bootstrap/scss/variables";
 @import "components/palette";
-
+@import "node_modules/bootstrap/scss/functions";
 //overriding bootstrap variables
 $primary:       $custom-bottle-green;
 $secondary:     $custom-medium-gray;
