--- a/src/components/_palette.scss
+++ b/src/components/_palette.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli:wght@300&family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@300;600&family=Poppins:wght@300;600&display=swap');
 
 // styling adapted from Gower presentation style
 $custom-dark-gray: #65617d;
