--- a/src/pages/bills.scss
+++ b/src/pages/bills.scss
@@ -7,6 +7,10 @@
     padding: 1rem 0rem;
     margin: 1rem 0rem;
   }
+
+  .highlight {
+    color: $custom-bottle-green;
+  }
   .pay-btn {
     background-color: $custom-bottle-green;
     border: none;
