--- a/src/pages/bills/change.scss
+++ b/src/pages/bills/change.scss
@@ -4,12 +4,20 @@
 .change {
   padding: 0rem 1rem;
 
+  .modal-body {
+    text-align: center;
+    margin-top: 6rem;
+  }
+
     .pie{
         font-size: 0.3rem;
         color: white;
         padding: 1rem;
     }
 
+    .choose{
+      color: $custom-bottle-green;
+    }
 
   .overview {
     padding: 1rem 0rem;
