--- a/src/pages/bills/change.scss
+++ b/src/pages/bills/change.scss
@@ -5,6 +5,17 @@
 .change {
   padding: 0rem 1rem;
 
+  .choices {
+    font-size: 80%;
+  }
+
+  .icon{
+    color: $custom-medium-gray;
+    &.you{
+      color: $custom-bottle-green;
+    }
+  }
+
 
     .pie{
         font-size: 0.3rem;
